crates/hir-ty/tests/snapshots/jls_packages__duplicate_package_declaration.snap
---
source: crates/hir-ty/tests/jls_packages.rs
assertion_line: 205
expression: out
---
FILE /src/com/example/A.java:
package com.example;
package com.example.other;

public class A {}

method : package-path-mismatch: @1:8Package name 'com.example.other' does not correspond to the file path 'src/com/example'
method : duplicate-package: @1:8duplicate package declaration 'com.example.other'
