crates/hir-ty/tests/snapshots/jls_packages__mismatched_declared_package.snap
---
source: crates/hir-ty/tests/jls_packages.rs
expression: out
---
FILE /src/com/example/A.java:
package com.example;

public class A {}

FILE /src/org/other/Misplaced.java:
package com.example;

public class Misplaced {}

@0:8: package-path-mismatch: Package name 'com.example' does not correspond to the file path 'org.other'
