crates/hir-ty/tests/snapshots/jls_packages__single_file_root_dotted.snap
---
source: crates/hir-ty/tests/jls_packages.rs
assertion_line: 188
expression: out
---
FILE /proj/src/main/java/org/example/Unmatched.java:
package org.example.unmatched.pkg;

public class Unmatched {}

method : package-path-mismatch: @0:8Package name 'org.example.unmatched.pkg' does not correspond to the file path 'org.example'
